--- a/app/src/main/res/layout/activity_register_user.xml
+++ b/app/src/main/res/layout/activity_register_user.xml
@@ -5,8 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorWelcome"
-    android:padding="30dp"
-    tools:context=".UnitTest.UserRegister">
+    android:padding="30dp">
 
     <LinearLayout
         android:layout_width="match_parent"
