--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -79,6 +79,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="@string/inp_email"
+            android:textColorHint="@color/colorAccent"
             app:boxStrokeColor="@color/colorAccent"
             app:boxStrokeWidthFocused="2dp"
             app:endIconMode="clear_text"
@@ -104,6 +105,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:hint="@string/inp_name"
+            android:textColorHint="@color/colorAccent"
+            app:boxBackgroundColor="@color/colorWhite"
             app:boxStrokeColor="@color/colorAccent"
             app:boxStrokeWidthFocused="2dp"
             app:endIconMode="clear_text"
@@ -128,11 +131,12 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="20dp"
             android:hint="@string/inp_number"
-            app:boxStrokeColor="@color/colorAccent"
+            android:textColorHint="@color/colorAccent"
+            app:boxBackgroundColor="@color/colorWhite"
+            app:boxStrokeColor="@color/colorBlack"
             app:boxStrokeWidthFocused="2dp"
             app:endIconMode="clear_text"
             app:endIconTint="@color/colorAccent"
-            app:hintTextColor="@color/colorAccent"
             app:startIconDrawable="@drawable/ic_number"
             app:startIconTint="@color/colorAccent">
 
