CRUD Makanan Fix

--- a/app/src/main/res/layout/activity_menu_makanan.xml
+++ b/app/src/main/res/layout/activity_menu_makanan.xml
@@ -6,7 +6,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="?attr/bg"
-        tools:context=".makanan.MenuMakanan">
+        tools:context=".makanan.MenuMakanan"
+        android:id="@+id/mainContainer">
 
         <ImageView
             android:id="@+id/view_shape"
@@ -60,6 +61,18 @@
             android:src="@drawable/ic_arrow_back_24"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/btnA_food"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="20dp"
+            android:layout_marginTop="420dp"
+            app:srcCompat="@drawable/ic_baseline_add_24"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view_shape">
+
+        </com.google.android.material.floatingactionbutton.FloatingActionButton>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
