--- a/app/src/main/res/layout/adapter_recycler_view.xml
+++ b/app/src/main/res/layout/adapter_recycler_view.xml
@@ -4,12 +4,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
-<!--    <data>-->
-<!--        <variable-->
-<!--            name="mkn"-->
-<!--            type="com.arnawajuan.tubes_uts.makanan.Makanan" />-->
-<!--    </data>-->
-
     <LinearLayout
         android:id="@+id/ParentAdapter"
         android:layout_width="wrap_content"
@@ -38,7 +32,7 @@
                     android:layout_marginStart="25dp"
                     android:layout_marginTop="16dp"
                     android:layout_marginBottom="19dp"
-                    android:src="@drawable/makanan_nasigoreng"
+                    android:src="@drawable/makanan_icon"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
