Hidup Susah Tanpa Coding Hidup Susah Dengan Coding

--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -90,10 +90,9 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/inputEmail"
-                android:editable="false"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:inputType="text"
+                android:inputType="textEmailAddress"
 
                 />
 
